conformance_test/positive_tests/09_test_configurations/0901_communication_ports/NegSem_0901_Communication_ports_007.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:9.1, Verify that a two TSI port cannot be connected
 ** @verdict  pass reject
 ***************************************************/

/*NOTE: see Figure 7(f): Two TSI port cannot be connected
 * */

module NegSem_0901_Communication_ports_007 {
  
    type port P message {
        inout integer
    } with {extension "internal"}

    type component GeneralComp
    {
        port P p1, p2;
    }
	
    testcase TC_NegSem_0901_Communication_ports_007() runs on GeneralComp system GeneralComp {
		var GeneralComp s := system;
        map(s:p2, system:p1); // error: p1 and p2 cannot be connected
		
        setverdict(pass);
    }
	
    control{
        execute(TC_NegSem_0901_Communication_ports_007());
    }
}

